# internal/restapi/operations/player/post_roster_rosterid_rearrange_responses.go
@@ -1,190 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package player
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/ilyakaznacheev/roster/internal/models"
-)
-
-// PostRosterRosteridRearrangeOKCode is the HTTP code returned for type PostRosterRosteridRearrangeOK
-const PostRosterRosteridRearrangeOKCode int = 200
-
-/*PostRosterRosteridRearrangeOK successful operation
-
-swagger:response postRosterRosteridRearrangeOK
-*/
-type PostRosterRosteridRearrangeOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Roster `json:"body,omitempty"`
-}
-
-// NewPostRosterRosteridRearrangeOK creates PostRosterRosteridRearrangeOK with default headers values
-func NewPostRosterRosteridRearrangeOK() *PostRosterRosteridRearrangeOK {
-
-	return &PostRosterRosteridRearrangeOK{}
-}
-
-// WithPayload adds the payload to the post roster rosterid rearrange o k response
-func (o *PostRosterRosteridRearrangeOK) WithPayload(payload *models.Roster) *PostRosterRosteridRearrangeOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post roster rosterid rearrange o k response
-func (o *PostRosterRosteridRearrangeOK) SetPayload(payload *models.Roster) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostRosterRosteridRearrangeOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostRosterRosteridRearrangeForbiddenCode is the HTTP code returned for type PostRosterRosteridRearrangeForbidden
-const PostRosterRosteridRearrangeForbiddenCode int = 403
-
-/*PostRosterRosteridRearrangeForbidden forbidden
-
-swagger:response postRosterRosteridRearrangeForbidden
-*/
-type PostRosterRosteridRearrangeForbidden struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewPostRosterRosteridRearrangeForbidden creates PostRosterRosteridRearrangeForbidden with default headers values
-func NewPostRosterRosteridRearrangeForbidden() *PostRosterRosteridRearrangeForbidden {
-
-	return &PostRosterRosteridRearrangeForbidden{}
-}
-
-// WithPayload adds the payload to the post roster rosterid rearrange forbidden response
-func (o *PostRosterRosteridRearrangeForbidden) WithPayload(payload *models.Error) *PostRosterRosteridRearrangeForbidden {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post roster rosterid rearrange forbidden response
-func (o *PostRosterRosteridRearrangeForbidden) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostRosterRosteridRearrangeForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(403)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostRosterRosteridRearrangeNotFoundCode is the HTTP code returned for type PostRosterRosteridRearrangeNotFound
-const PostRosterRosteridRearrangeNotFoundCode int = 404
-
-/*PostRosterRosteridRearrangeNotFound not found
-
-swagger:response postRosterRosteridRearrangeNotFound
-*/
-type PostRosterRosteridRearrangeNotFound struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewPostRosterRosteridRearrangeNotFound creates PostRosterRosteridRearrangeNotFound with default headers values
-func NewPostRosterRosteridRearrangeNotFound() *PostRosterRosteridRearrangeNotFound {
-
-	return &PostRosterRosteridRearrangeNotFound{}
-}
-
-// WithPayload adds the payload to the post roster rosterid rearrange not found response
-func (o *PostRosterRosteridRearrangeNotFound) WithPayload(payload *models.Error) *PostRosterRosteridRearrangeNotFound {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post roster rosterid rearrange not found response
-func (o *PostRosterRosteridRearrangeNotFound) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostRosterRosteridRearrangeNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(404)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostRosterRosteridRearrangeInternalServerErrorCode is the HTTP code returned for type PostRosterRosteridRearrangeInternalServerError
-const PostRosterRosteridRearrangeInternalServerErrorCode int = 500
-
-/*PostRosterRosteridRearrangeInternalServerError internal server error
-
-swagger:response postRosterRosteridRearrangeInternalServerError
-*/
-type PostRosterRosteridRearrangeInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewPostRosterRosteridRearrangeInternalServerError creates PostRosterRosteridRearrangeInternalServerError with default headers values
-func NewPostRosterRosteridRearrangeInternalServerError() *PostRosterRosteridRearrangeInternalServerError {
-
-	return &PostRosterRosteridRearrangeInternalServerError{}
-}
-
-// WithPayload adds the payload to the post roster rosterid rearrange internal server error response
-func (o *PostRosterRosteridRearrangeInternalServerError) WithPayload(payload *models.Error) *PostRosterRosteridRearrangeInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post roster rosterid rearrange internal server error response
-func (o *PostRosterRosteridRearrangeInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostRosterRosteridRearrangeInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
